update tests and rename impl package to gcp_client_impl

--- a/components/gcp_client_impl/pyproject.toml
+++ b/components/gcp_client_impl/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "cloud-storage-client-impl"
+name = "gcp-client-impl"
 version = "0.1.0"
 requires-python = ">=3.11"
 dependencies = [
@@ -13,7 +13,7 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [tool.hatch.build.targets.wheel]
-packages = ["src/cloud_storage_client_impl"]
+packages = ["src/gcp_client_impl"]
 
 [tool.uv.sources]
 cloud-storage-client-api = { workspace = true }
