--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,8 @@ __pycache__/
 *.py[codz]
 *$py.class
 
+.DS_Store
+
 # C extensions
 *.so
 
@@ -136,6 +138,8 @@ celerybeat.pid
 
 # Environments
 .env
+.env.local
+.env.*.local
 .envrc
 .venv
 .venv-1/
@@ -206,3 +210,11 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+# GCP credentials – never commit
+credentials.json
+token.json
+*.json.ci_backup
+service-account-key.json
+*.key
+.gcp/
+.gcp-local/
