fix: remove tests/__init__.py, fix coverage config, remove register_get_client from public API

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,3 +7,4 @@ nav:
   - GCP Implementation: gcp-impl.md
   - Testing: testing.md
   - CircleCI setup: circleci-setup.md
+  - Architecture & Design: design.md
